# ThungaSync

advanced_downloader/: Cargo.toml
advanced_downloader/frontend/: _routes.json  index.html
advanced_downloader/functions/: ws.js
advanced_downloader/src/: chunk_downloader.rs  download_manager.rs  file_manager.rs  lib.rs  metadata.rs  p2p_manager.rs
