[package]
name = "advanced_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls","stream"] }
bytes = "1"
thiserror = "1"
futures = "0.3"
url = "2.5"
indicatif = "0.17"
futures-util = "0.3.31"
itertools = "0.12"
local-ip-address = "0.6"
md5 = "0.7"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
mdns-sd = "0.11"
hostname = "0.3"
socket2 = "0.5"
rand = "0.8"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }

